fixed nav height alignment issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,7 @@ h1,h2,h3,h4,h5,input[type=submit] {
 	border-bottom: 1px solid #bab8ae;
 	margin: 0;
 	text-align: center;
+	height: 43px;
 }
 
 .nav-wrap ul li {
